# CmakeCrashCourse

./: CMakeLists.txt  hello.cc
mylib/: CMakeLists.txt  mylib.cc
